deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eleven
  namespace: fedfina
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eleven
  template:
    metadata:
      labels:
        app: eleven
    spec:
      containers:
        - name: eleven
          image: docker.io/docker4zerocool/fedfina:latest # updated by CI
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: eleven
  namespace: fedfina
spec:
  selector:
    app: eleven
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eleven-ingress
  namespace: fedfina
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - fedfina.bionicaisolutions.com
      secretName: fedfina-tls
  rules:
    - host: fedfina.bionicaisolutions.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eleven
                port:
                  number: 80
